[project]
name = "readinglens"
version = "0.1.0"
description = "Personal article recommender based on reading highlights"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "html2text>=2024.2.26",
    "langchain-community>=0.3.18",
    "lxml[html-clean]>=5.3.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.4",
    "ruff>=0.3.0",
]

[project.scripts]
process-data = "readinglens.data_processor:main"
train-model = "readinglens.train:main" 
predict = "readinglens.predict:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest]
testpaths = ["tests"]
